--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,19 +1,19 @@
 body{
-    background-color: rgb(53, 82, 93);
+    background-color: rgb(186, 205, 211);
 }
 h1{
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 3rem;
-    color:aliceblue;
+    font-size: 2.5rem;
+    color:rgb(31, 36, 41);
     justify-content: center;
     text-align: center;
-    padding: 5rem;
-  text-transform: uppercase;
+    padding: 2rem;
+    text-transform: uppercase;
 }
 
 .container{
-    padding:2rem;
     display:flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
 }
