--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -1,11 +1,12 @@
 .container{
-    margin:50px,0;
+    margin:50px 0;
 }
 h5{
     color:black;
 }
 .card{
     margin: 0 2% !important;
+    border-color: black;
 }
 
 .infected{
